# rlox

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PROJECT_QUICK_REFERENCE.md  README.md  book.toml  docker-compose.gpu.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  wheels.yml
benchmarks/: ablation_component.py  ablation_n_envs.py  ablation_obs_dim.py  bench_algorithms.py  bench_buffer_ops.py  bench_candle_collection.py  bench_distributed.py  bench_e2e_rollout.py  bench_env_stepping.py  bench_gae.py  bench_llm_ops.py  bench_mmap_buffer.py  bench_nn_backends.py  bench_trl_comparison.py  conftest.py  multi_seed_runner.py  multi_seed_runner_sb3.py  run_all.py
benchmarks/convergence/: analyze.py  common.py  mujoco_benchmark.py  plot_learning_curves.py  plot_profiles.py  requirements.txt  rlox_runner.py  run_experiment.py  rust_nn_runner.py  sb3_runner.py  verify_convergence.py
blog/: hugo.toml
book/src/: SUMMARY.md  getting-started.md  introduction.md  python-guide.md  rust-guide.md
crates/rlox-bench/: Cargo.toml
crates/rlox-bench/benches/: env_stepping.rs  micro_ops.rs  nn_backends.rs
crates/rlox-bench/src/: lib.rs
crates/rlox-burn/: Cargo.toml  README.md
crates/rlox-burn/src/: actor_critic.rs  continuous_q.rs  convert.rs  deterministic.rs  dqn.rs  entropy.rs  lib.rs  mlp.rs  stochastic.rs  training.rs
crates/rlox-candle/: Cargo.toml  README.md
crates/rlox-candle/src/: actor_critic.rs  collector.rs  continuous_q.rs  convert.rs  deterministic.rs  dqn.rs  entropy.rs  lib.rs  mlp.rs  stochastic.rs  training.rs
crates/rlox-core/: Cargo.toml  README.md
crates/rlox-core/src/: error.rs  lib.rs  seed.rs
crates/rlox-core/src/buffer/: columnar.rs  concurrent.rs  episode.rs  extra_columns.rs  flat.rs  her.rs  mixed.rs  mmap.rs  mod.rs  offline.rs  priority.rs  provenance.rs  ringbuf.rs  sequence.rs  varlen.rs
crates/rlox-core/src/env/: batch.rs  builtins.rs  mod.rs  mujoco.rs  parallel.rs  spaces.rs
crates/rlox-core/src/llm/: ops.rs
crates/rlox-core/src/pipeline/: channel.rs  collector.rs  mod.rs
crates/rlox-core/src/training/: augmentation.rs  cpd.rs  gae.rs  kl.rs  mod.rs  normalization.rs  packing.rs  reward_shaping.rs  simd_ops.rs  vtrace.rs  weight_ops.rs
crates/rlox-grpc/: Cargo.toml  README.md  build.rs
crates/rlox-grpc/proto/: env.proto
crates/rlox-grpc/src/: client.rs  error.rs  lib.rs  server.rs
crates/rlox-nn/: Cargo.toml  README.md
crates/rlox-python/: Cargo.toml  README.md
crates/rlox-python/src/: buffer.rs  env.rs  lib.rs  llm.rs  nn.rs  training.rs
dist-ci/wheels-aarch64-apple-darwin/: rlox-0.2.0-cp312-cp312-macosx_11_0_arm64.whl
dist-ci/wheels-x86_64-unknown-linux-gnu/: rlox-0.2.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
docs/: CONTRIBUTING-translations.md  algorithm_gap_analysis.md  benchmark-improvement-plan.md  benchmarking_plan.md  docs-overhaul-plan.md  documentation-improvement-plan.md  examples.md  extensible-trainer-plan.md  getting-started.de.md  getting-started.fr.md  getting-started.md  getting-started.pl.md  github-pages-improvement-plan.md  hybrid-collection-plan.md  implementation-plan.md  index.de.md  index.fr.md  index.md  index.pl.md  learning-path.de.md  learning-path.fr.md  learning-path.md  learning-path.pl.md  llm-post-training.md  math-reference.md  offline-rl-implementation-plan.md  polars_for_rl_features.md  profiling-report.md  python-guide.md  references.md  rl-introduction.md  rlox_PRD_old_feature_spec.md  rust-guide.md  rust-optimization-plan.md  trl-gap-analysis-plan.md
docs-landing/: index.html
docs/algorithms/: a2c.md  awr.md  bc.md  calql.md  cql.md  diffusion.md  dpo.md  dqn.md  dreamer.md  dt.md  dtp.md  grpo.md  impala.md  index.md  iql.md  mappo.md  mpo.md  ppo.md  qmix.md  sac.md  td3.md  td3bc.md  trpo.md  vpg.md
docs/api/: algorithms.md  buffers.md  callbacks.md  config.md  dashboard.md  distributed.md  index.md  policies.md  trainers.md
docs/benchmark/: README.md  buffer-ops.md  convergence-results.md  e2e-rollout.md  gae.md  llm-ops.md  nn-backends.md  setup.md  v6-results-summary.md
docs/overrides/: main.html
docs/plans/: README.md  advanced-rl-improvements.md  benchmark-comparison-inconsistencies.md  blog-draft-rlox-launch.md  concurrent-buffer-diffusion-policy.md  convergence-gap-investigation.md  custom-architectures.md  evaluation-plan.md  external-review-improvements.md  final-recommendations.md  fix-convergence-bugs.md  general-trainer-architecture.md  halfcheetah-investigation.md  implementation-plan-phases-7-9.md  implementation-strategy-advanced-rl-v2.md  implementation-strategy-advanced-rl.md  master-improvement-plan.md  math-verification-report.md  math-verification-v2.md  newcomer-experience-audit.md  nn-backend-abstraction.md  package-review-final.md  paper-appendices.md  paper-discussion.md  paper-implementation.md  paper-introduction.md  paper-methods-section.md  paper-related-work.md  (+31 more)
examples/: custom_environment.py  custom_reward_grpo.py  fast_gae.py  intrinsic_motivation.py  meta_learning.py  ppo_cartpole.py  reward_shaping.py  sac_pendulum.py  vec_env_throughput.py
examples/rlox-plugin-example/: pyproject.toml
examples/rlox-plugin-example/rlox_plugin_example/: __init__.py  buffers.py  envs.py
mkdocs-docs/: index.md
plans/: mujoco-bindings.md  new_algorithms_plan.md  v6-convergence-launch.md
results/: correctness-results.xml  performance-results.xml  validation-fixes.json  validation-hopper-500k.json
scripts/: check-experiments.sh  debug_ppo_config.py  debug_ppo_paths.py  gcp-component-bench.sh  gcp-convergence-bench-gpu.sh  gcp-convergence-bench.sh  gcp-hopper-validation.sh  gcp-v7-ppo-only.sh  gcp-v8-ppo-fixed.sh  inspect_results.py  investigate_ppo_gap.py  local_halfcheetah_ablation.py  local_ppo_comparison.py  pull-results.sh  test.sh  update_readme.py  validate_core_six.py
tests/: test_env_errors.py
(+367 files in other folders)
