[workspace]
resolver = "2"
members = [
    "crates/rlox-core",
    "crates/rlox-nn",
    "crates/rlox-burn",
    "crates/rlox-candle",
    "crates/rlox-python",
    "crates/rlox-bench",
    "crates/rlox-grpc",
]

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/riserally/rlox"
keywords = ["rl", "pyo3", "machine-learning", "ppo", "gymnasium"]
categories = ["science", "algorithms"]
