[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rlox"
version = "0.2.1"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
description = "Rust-accelerated reinforcement learning with Python bindings"
dependencies = ["numpy>=1.21"]

[tool.maturin]
manifest-path = "crates/rlox-python/Cargo.toml"
module-name = "rlox._rlox_core"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
