[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rlox"
version = "0.3.0"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
description = "Rust-accelerated reinforcement learning — 142x faster GAE, 53x faster rollouts. The Polars of RL."
readme = "README.md"
authors = [{name = "Wojciech Kowalinski"}]
keywords = ["reinforcement-learning", "rl", "rust", "ppo", "grpo", "dpo", "gymnasium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
all = ["torch>=2.0", "gymnasium>=0.29"]

[project.scripts]
rlox = "rlox.__main__:main"

[project.urls]
Homepage = "https://github.com/riserally/rlox"
Repository = "https://github.com/riserally/rlox"
Documentation = "https://github.com/riserally/rlox/tree/main/docs"
Changelog = "https://github.com/riserally/rlox/blob/main/CHANGELOG.md"
Issues = "https://github.com/riserally/rlox/issues"

[tool.maturin]
manifest-path = "crates/rlox-python/Cargo.toml"
module-name = "rlox._rlox_core"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
