[package]
name = "rlox-bench"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[[bench]]
name = "env_stepping"
harness = false

[[bench]]
name = "micro_ops"
harness = false

[[bench]]
name = "nn_backends"
harness = false

[dependencies]
rlox-core = { path = "../rlox-core" }
rlox-nn = { path = "../rlox-nn" }
rlox-burn = { path = "../rlox-burn" }
rlox-candle = { path = "../rlox-candle" }
burn = { version = "0.16", features = ["autodiff", "ndarray"] }
candle-core = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
