[package]
name = "rlox-candle"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Candle backend for rlox neural network training"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rlox-nn = { version = "0.1.0", path = "../rlox-nn" }
rlox-core = { version = "0.1.0", path = "../rlox-core" }
candle-core = "0.8"
candle-nn = "0.8"
rand = "0.9"
rand_chacha = "0.9"

[dev-dependencies]
