[package]
name = "rlox-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Rust-accelerated reinforcement learning core: environments, buffers, GAE, GRPO"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rayon = "1.10"
rand = "0.9"
rand_chacha = "0.9"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
memmap2 = "0.9"
crossbeam-channel = "0.5"

[dev-dependencies]
proptest = "1"
tempfile = "3"
