[package]
name = "rlox-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Rust-accelerated RL core: VecEnv, replay/prioritized/offline buffers, GAE, V-trace, KL, GRPO, async pipeline"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rayon = "1.10"
rand = "0.9"
rand_chacha = "0.9"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
memmap2 = "0.9"
crossbeam-channel = "0.5"

[features]
default = []
mujoco = []  # Enable when MuJoCo C library is installed

[dev-dependencies]
proptest = "1"
tempfile = "3"
