[package]
name = "rlox-python"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false
description = "Python bindings for rlox via PyO3 — exposes buffers, environments, GAE, KL, and CandleCollector"

[lib]
name = "_rlox_core"
crate-type = ["cdylib"]
doc = false

[dependencies]
rlox-core = { path = "../rlox-core", features = [] }
rlox-nn = { path = "../rlox-nn" }
rlox-burn = { path = "../rlox-burn" }
rlox-candle = { path = "../rlox-candle" }
burn = { version = "0.16", features = ["autodiff", "ndarray"] }
candle-core = "0.8"
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"

[features]
default = []
gpu = ["rlox-core/gpu"]
